--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,61 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body {
+  background: rgb(231, 231, 231);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+}
+
+.App.dark {
+  --font-color: rgb(255, 255, 255);
+  --background: rgb(50, 50, 50);
+  --background-light: rgb(101, 101, 101);
+  transition: all 0.3s;
+}
+
+.App {
+  margin: 2rem auto;
+  padding: 1rem 2rem;
+  max-width: 700px;
+  background: var(--background);
+  color: var(--font-color);
+  box-shadow: 4px 4px 10px rgba(33, 33, 33, 0.2);
+  border-radius: 10px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+p {
+  text-align: center;
+  font-weight: 600;
+}
+
+header button {
+  background-color: greenyellow;
+  
+}
+
+.navbar {
+  background-color: darkgray;
+  height: 40px !important;
+  max-height: 100px !important;
+}
+
+ #brands img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+
+h1 {
+  font-weight: 700;
+}
